<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
   >

  <com.zhy.autolayout.AutoFrameLayout
      android:id="@+id/framlayout"

      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentTop="true"
      android:layout_above="@+id/autoLinearLayout"></com.zhy.autolayout.AutoFrameLayout>

   <RadioGroup
       android:id="@+id/autoLinearLayout"
       android:layout_alignParentBottom="true"
       android:layout_width="match_parent"
       android:layout_height="94px"
       android:orientation="horizontal"

       >
       <RadioButton
           android:id="@+id/rb_home"
           style="@style/RadioButton"
         android:layout_marginStart="67px"
           android:text="@string/home"
           android:checked="true"
           android:drawableTop="@drawable/home"
             />
       <RadioButton
           android:id="@+id/rb_merchant"
           style="@style/RadioButton"
           android:text="@string/merchant"
           android:drawableTop="@drawable/shangjia"
           />
       <RadioButton
           android:id="@+id/rb_cat"
           style="@style/RadioButton"
           android:text="@string/shoppingcar"
           android:drawableTop="@drawable/car"
           />
       <RadioButton
           android:id="@+id/rb_mypage"
        style="@style/RadioButton"
           android:layout_marginEnd="67px"
           android:text="@string/my"
           android:drawableTop="@drawable/my"
           />
   </RadioGroup>

</com.zhy.autolayout.AutoRelativeLayout>
