<com.zhy.autolayout.AutoRelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/autulayout"
        android:layout_width="match_parent"
        android:layout_height="430px"
        android:background="@mipmap/wanxia"
        >

        <ImageView
            android:id="@+id/img_lingdang"
            android:layout_marginTop="55px"
          android:layout_marginRight="20px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/tell_xiaoxi"
          />

        <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/circimg"
            android:layout_width="145px"
            android:layout_height="145px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="288px"
            android:src="@mipmap/wanxia"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            />
           <TextView
               android:layout_marginTop="6px"
               android:textColor="@color/white"
               android:textSize="26px"
               android:text="邻家小屋"
               android:layout_centerHorizontal="true"
               android:layout_below="@id/circimg"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
    </com.zhy.autolayout.AutoRelativeLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:background="#ffffff"
        android:layout_marginTop="380px"
       android:layout_centerHorizontal="true"
        android:layout_width="680px"
        android:layout_height="100px">
      <com.zhy.autolayout.AutoLinearLayout
          android:layout_marginTop="16px"
          android:layout_marginStart="34px"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
          <ImageView
              android:layout_gravity="center"
              android:id="@+id/img_qbu"
              android:src="@drawable/leixing"
             style="@style/Image_Mypage"/>
          <TextView
              android:text="@string/qubu"
              android:layout_below="@id/img_qbu"
             style="@style/Textview_myshouhuo"
              />
      </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_marginTop="16px"
              android:layout_marginLeft="104px"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/img_daifahuo"
                android:src="@drawable/daifahuo"
                style="@style/Image_Mypage"/>
            <TextView
                android:text="@string/daifahou"
                android:layout_below="@id/img_daifahuo"
                style="@style/Textview_myshouhuo"
               />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_marginTop="16px"
            android:layout_marginLeft="104px"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/img_daishouhuo"
                android:src="@drawable/shouhou"
                style="@style/Image_Mypage"/>
            <TextView
                android:text="@string/daishouhuo"
                android:layout_below="@id/img_daishouhuo"
                style="@style/Textview_myshouhuo"
                />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_marginTop="16px"
            android:layout_marginLeft="104px"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/img_pingjia"
                android:src="@drawable/pingjia"
                style="@style/Image_Mypage"/>
            <TextView
                android:text="@string/daipingjia"
                android:layout_below="@id/img_pingjia"
                style="@style/Textview_myshouhuo"
                />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_marginTop="16px"
            android:layout_marginLeft="70px"
           android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/img_shouhou"
                android:src="@drawable/shouhuo"
                style="@style/Image_Mypage"/>
            <TextView
                style="@style/Textview_myshouhuo"
                android:text="@string/shouhou"
                android:layout_below="@id/img_shouhou"
              />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
<com.zhy.autolayout.AutoLinearLayout
    android:layout_below="@id/autulayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
<com.zhy.autolayout.AutoRelativeLayout
    android:layout_width="match_parent"
    android:layout_height="170px">
<com.zhy.autolayout.AutoRelativeLayout
    android:layout_marginTop="110px"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/img_shoucang"
        style="@style/Image_Mypage"
        android:background="@drawable/shoucang"
        />
    <TextView
        android:text="@string/shoucnag"
        android:layout_toRightOf="@id/img_shoucang"
       style="@style/Textview_Mypage"
        />
    <ImageView
        style="@style/img_mypage_huitui"
     />
</com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoRelativeLayout>
        <View
            style="@style/view"
            />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoRelativeLayout
        style="@style/autu_100"
        >
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/autolayout_newaddress"
            style="@style/autola_mypage_item">
            <ImageView
                android:id="@+id/img_dizhi"
               style="@style/Image_Mypage"
               android:background="@drawable/dizhi"
                />
             <TextView
                 android:text="@string/shouhuo"
                 android:layout_toRightOf="@id/img_dizhi"
                 style="@style/Textview_Mypage"
                 />
            <ImageView
                style="@style/img_mypage_huitui"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoRelativeLayout>
    <View
   style="@style/view"
        />
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/autola_setting"
        style="@style/autu_100">
        <com.zhy.autolayout.AutoRelativeLayout
            style="@style/autola_mypage_item"
          >
            <ImageView
                android:id="@+id/img_setting"
                style="@style/Image_Mypage"
                android:background="@drawable/setting"
                />
            <TextView
                android:text="@string/setting"
                android:layout_toRightOf="@id/img_setting"
                style="@style/Textview_Mypage"
                />
            <ImageView
                style="@style/img_mypage_huitui"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoRelativeLayout>
    <View
        style="@style/view"
        />
    <com.zhy.autolayout.AutoRelativeLayout
       style="@style/autu_100">
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/autolayout_aboutwe"
            style="@style/autola_mypage_item">
            <ImageView
                android:id="@+id/img_my"
                style="@style/Image_Mypage"
                android:background="@drawable/we"
                />
            <TextView
                android:text="@string/we"
                android:layout_toRightOf="@id/img_my"
                style="@style/Textview_Mypage"
                />
            <ImageView
                style="@style/img_mypage_huitui"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoRelativeLayout>
<View
    style="@style/view_kuan"/>
    <com.zhy.autolayout.AutoRelativeLayout
      style="@style/autu_100">
        <com.zhy.autolayout.AutoRelativeLayout
            style="@style/autola_mypage_item">
            <ImageView
                android:id="@+id/img_fenxiang"
                style="@style/Image_Mypage"
                android:background="@drawable/share"
                />
            <TextView
                android:text="@string/fenxiang"
                android:layout_toRightOf="@id/img_fenxiang"
                style="@style/Textview_Mypage"
                />
            <ImageView
                style="@style/img_mypage_huitui"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoRelativeLayout>
    <View
        style="@style/view"
        />
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_marginTop="35px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_dafen"
                style="@style/Image_Mypage"
                android:background="@drawable/dafen"
                />
            <TextView
                android:text="@string/dafen"
                android:layout_toRightOf="@id/img_dafen"
                style="@style/Textview_Mypage"
                />
            <ImageView
                style="@style/img_mypage_huitui"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoRelativeLayout>
