<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:tools="http://schemas.android.com/tools"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:background="#f4f7f8"
                                     android:orientation="vertical"
                                     tools:context="threegroup.tl.com.eddemoone.merchant.MerchantFragment">
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:orientation="horizontal"
    >
        <threegroup.tl.com.eddemoone.merchant.widget.SearchView
            android:id="@+id/merchant_edt_input"
            android:layout_width="540px"
            android:layout_height="56px"
            android:layout_marginLeft="20px"
            android:background="@drawable/shap_merchant_search"
            android:gravity="center"
            android:hint="@string/search"
            android:textSize="22px"
        />
        <Button
            android:id="@+id/merchant_btn_join"
            android:layout_width="120px"
            android:layout_height="56px"
            android:layout_marginLeft="20px"
            android:background="@drawable/shap_merchant_join"
            android:text="@string/join"
            android:textColor="#e93a38"
            android:textSize="22px"
        />
    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/merchant_lin_smoke"
            android:layout_width="wrap_content"
            android:layout_height="144px"
            android:layout_marginTop="36px"
            android:layout_weight="1"
            android:layout_marginBottom="24px"
            android:orientation="vertical"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/yan"
            />
            <TextView
                android:layout_width="22px"
                android:layout_height="22px"
                android:layout_gravity="center"
                android:layout_marginTop="18px"
                android:text="@string/smoke"
                android:textColor="#2a2a2a"
                android:textSize="22px"
            />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/merchant_lin_tea"
            android:layout_width="wrap_content"
            android:layout_height="144px"
            android:layout_marginTop="36px"
            android:layout_weight="1"
            android:orientation="vertical"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/cha"
            />
            <TextView
                android:layout_width="22px"
                android:layout_height="22px"
                android:layout_gravity="center"
                android:layout_marginTop="18px"
                android:text="@string/tea"
                android:textColor="#2a2a2a"
                android:textSize="22px"
            />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/merchant_lin_bear"
            android:layout_width="wrap_content"
            android:layout_height="144px"
            android:layout_marginTop="36px"
            android:layout_weight="1"
            android:orientation="vertical"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/jiu"
            />
            <TextView
                android:layout_width="22px"
                android:layout_height="22px"
                android:layout_gravity="center"
                android:layout_marginTop="18px"
                android:text="@string/bear"
                android:textColor="#2a2a2a"
                android:textSize="22px"
            />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/merchant_lin_zhubao"
            android:layout_width="wrap_content"
            android:layout_height="144px"
            android:layout_marginTop="36px"
            android:layout_weight="1"
            android:orientation="vertical"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/zhubao"
            />
            <TextView
                android:layout_width="22px"
                android:layout_height="22px"
                android:layout_gravity="center"
                android:layout_marginTop="18px"
                android:text="@string/zhubao"
                android:textColor="#2a2a2a"
                android:textSize="22px"
            />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/merchant_lin_tea2"
            android:layout_width="wrap_content"
            android:layout_height="144px"
            android:layout_marginTop="36px"
            android:layout_weight="1"
            android:orientation="vertical"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/zhubao"
            />
            <TextView
                android:layout_width="22px"
                android:layout_height="22px"
                android:layout_gravity="center"
                android:layout_marginTop="18px"
                android:text="@string/zhubao"
                android:textColor="#2a2a2a"
                android:textSize="22px"
            />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/merchant_lin_tea3"
            android:layout_width="wrap_content"
            android:layout_height="144px"
            android:layout_marginTop="36px"
            android:layout_weight="1"
            android:orientation="vertical"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/zhubao"
            />
            <TextView
                android:layout_width="22px"
                android:layout_height="22px"
                android:layout_gravity="center"
                android:layout_marginTop="18px"
                android:text="@string/zhubao"
                android:textColor="#2a2a2a"
                android:textSize="22px"
            />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoRelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
    >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/maerchant_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            />


    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>
